# lab3

./: CMakeLists.txt  a.out  main.cpp
